[metadata]
name = dhall
version = 0.1.16
description = Python bindings for dhall, a functional configuration language
author =
  Simon Zeng <contact@simonzeng.com>
  Tristan Cacqueray <tdecacqu@redhat.com>
  Matthias Endler <matthias-endler@gmx.net>
license = "Apache-2.0"
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
packages = dhall
zip_safe = False
include_package_data = True
setup_requires =
  setuptools_rust
  pytest-runner
tests_require =
  pytest
  pytest-benchmark
  hypothesis

[options.package_data]
dhall =
  py.typed
  __init__.pyi
